Added random generated players

--- a/football-app-backend/package.json
+++ b/football-app-backend/package.json
@@ -17,5 +17,10 @@
     "mongoose": "^6.2.7",
     "nodemon": "^2.0.15",
     "supertest": "^6.2.4"
+  },
+  "devDependencies": {
+    "@faker-js/faker": "^7.6.0",
+    "install": "^0.13.0",
+    "npm": "^8.19.2"
   }
 }
