--- a/football-app/package.json
+++ b/football-app/package.json
@@ -17,6 +17,7 @@
     "react-scripts": "5.0.0",
     "react-select": "^5.2.2",
     "react-table": "^7.8.0",
+    "sass": "^1.56.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
